# AtomOS

./: .gitignore  CMakeLists.txt  Makefile  README.md  kernel.c  linker.ld  multiboot_header.S
apps/: app.h  calc.c  parser.c  parser.h  registry.c  registry.h
apps/calc/: calc.c  calc.h  parser.c  parser.h
arch/: boot.S  ports.h
drivers/: console.c  console.h  keyboard.c  keyboard.h  vga.c  vga.h
include/: common.h
iso/boot/grub/: grub.cfg
kernel/: kernel.c
lib/: input.c  input.h  util.c  util.h
ui/: menu.c  menu.h  ui.c  ui.h
